<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>LiveKit</groupId>
  <artifactId>LiveKit</artifactId>
  <version>1.4.6-BETA-0.3</version>
  <name>LiveKit</name>
  <properties>
  <maven.compiler.source>1.8</maven.compiler.source>
  <maven.compiler.target>1.8</maven.compiler.target>
</properties>

<build>
	<finalName>LiveKit</finalName>
	<sourceDirectory>src/main/java</sourceDirectory>
	<resources>
	<resource>
	<targetPath>.</targetPath>
	<filtering>true</filtering>
	<directory>${basedir}/src/main/resources/</directory>
	<includes>
	<include>plugin.yml</include>
	<include>config.yml</include>
  <include>texturepack.json</include>
  <include>biomes.json</include>
	</includes>
	</resource>
	</resources>
	<plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>2.2-beta-4</version>
        <configuration>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
        <finalName>LiveKit-${project.version}</finalName>
        <appendAssemblyId>false</appendAssemblyId>
        <archive>
        <manifest>
          <mainClass>com.philiplindner.main.App</mainClass>
        </manifest>
        </archive>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
            <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
		<plugin>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.3.2</version>
			<configuration>
			<source>1.8</source>
			<target>1.8</target>
			</configuration>
		</plugin>
	</plugins>
</build>

    <repositories>
      <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
      </repository>
      <repository>
        <id>jitpack.io</id>
        <url>https://jitpack.io</url>
      </repository>
      <!-- <repository>
        <id>snapshots</id>
        <url>http://localhost:8081/repository/maven-snapshots/</url>
      </repository> -->


      <repository>
          <id>dv8tion</id>
          <name>m2-dv8tion</name>
          <url>https://m2.dv8tion.net/releases</url>
      </repository>
      <repository>
        <id>Scarsz-Nexus</id>
        <url>https://nexus.scarsz.me/content/groups/public/</url>
      </repository>  
      <repository>
        <id>essentials-releases</id>
        <url>https://repo.essentialsx.net/releases/</url>
      </repository>
    </repositories>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/com.j256.ormlite/ormlite-core -->
    <dependency>
        <groupId>com.j256.ormlite</groupId>
        <artifactId>ormlite-core</artifactId>
        <version>5.5</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.j256.ormlite/ormlite-jdbc -->
    <dependency>
        <groupId>com.j256.ormlite</groupId>
        <artifactId>ormlite-jdbc</artifactId>
        <version>5.5</version>
    </dependency>
    <dependency>
        <groupId>at.livekit</groupId>
        <artifactId>LiveKitAPI</artifactId>
        <version>1.0-SNAPSHOT</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.2</version>
      <!-- scope>provided</scope -->
    </dependency>
	  <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7</version>
      <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.3.9</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20240303</version>
    </dependency>
      <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
    <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>1.17.2</version>
    </dependency>
    <dependency>
        <groupId>com.discordsrv</groupId>
        <artifactId>discordsrv</artifactId>
        <version>1.27.0</version>
        <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.comphenix.protocol/ProtocolLib-API -->
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.essentialsx</groupId>
      <artifactId>EssentialsX</artifactId>
      <version>2.20.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>com.github.luben</groupId>
        <artifactId>zstd-jni</artifactId>
        <version>1.5.5-1</version>
    </dependency>
    <dependency>
      <groupId>com.github.Querz</groupId>
      <artifactId>NBT</artifactId>
      <version>6.1</version>
    </dependency>
    <dependency>
      <groupId>net.essentialsx</groupId>
      <artifactId>EssentialsXSpawn</artifactId>
      <version>2.21.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/EssentialsXSpawn-2.21.0.jar</systemPath>
  </dependency>
  
  </dependencies>
</project>